--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,3 +5,5 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
+    script(src="../public/libs/jquery.js")
+    script(src="../public/libs/bootstrap/js/bootstrap.js")
